Moved Israels ticket loading code into student landing, fixed button icon styling, fixed button bottom border cutting off

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -92,6 +92,10 @@ footer {
     font-family: "Poppins";
     color: #545354;
 }
+.arrow-right-circle-icon{
+    margin-right: 8px ;
+    padding-top: 12px !important;
+}
 
 button[type="button"], button[type="submit"] input[type="reset"] {
     background: linear-gradient( 333deg, rgba(167, 115, 215, 0.72) 21%, rgba(169, 235, 244, 1) 75%);
@@ -101,7 +105,7 @@ button[type="button"], button[type="submit"] input[type="reset"] {
     font-weight: bolder;
     font-size: 14px;
     justify-content: center;
-    width: 70%;
+    /* width: 70%; */
     height: 40px;
     text-align: center !important;
     text-decoration: none;
